--- a/05_FirstStepsInJavawithSpringBoot/rest-with-spring-boot-and-java-erudio/pom.xml
+++ b/05_FirstStepsInJavawithSpringBoot/rest-with-spring-boot-and-java-erudio/pom.xml
@@ -12,9 +12,9 @@
 	<artifactId>rest-with-spring-boot-and-java-erudio</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>rest-with-spring-boot-and-java-erudio</name>
-	<description>Demo project for Spring Boot</description>
+	<description></description>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>19</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -26,7 +26,7 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-			<dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
